# zephyr-ei-xiao-nrf-demo

./: README.md
raw_data/: README.md
src/nrf52840/dmic_inference/boards/: xiao_ble_nrf52840_sense.overlay
src/nrf52840/imu_dataforwarder_nrf52_12_5hz/: CMakeLists.txt  prj.conf
src/nrf52840/imu_dataforwarder_nrf52_12_5hz/src/: main.c
src/nrf52840/imu_real_inference/: CMakeLists.txt  prj.conf
src/nrf52840/imu_real_inference/src/: main.cpp
src/nrf54l15/dmic_inference/: CMakeLists.txt  README.md  prj.conf  project_inferencing.h
src/nrf54l15/dmic_inference/boards/: xiao_nrf54l15_nrf54l15_cpuapp.overlay
src/nrf54l15/dmic_inference/src/: main.cpp
src/nrf54l15/imu_dataforwarder/src/: main.c
src/nrf54l15/imu_real_inference/src/: main.cpp
